Add native-image